# example-python-cpp-interop

./: .gitignore  CMakeLists.txt  README.md
include/: mylib.hpp
python/: mypylib.py  pythonapp.py
src/: mylib.cpp  mylib_pymodule.cpp
